[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fwwo-einsatzleiter"
version = "1.0.0"
description = "Einsatzleiter-Hilfswerkzeug Feuerwehr Wolfurt"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.30",
    "gunicorn>=22",
    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "PyMySQL>=1.1",
    "cryptography>=42",
    # Auth
    "passlib[bcrypt]>=1.7",
    "itsdangerous>=2.2",
    "python-jose[cryptography]>=3.3",
    # Config
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    # Templating
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    # PDF
    "weasyprint>=62",
    # Web Push
    "pywebpush>=2.0",
    # QR Code
    "qrcode[pil]>=7.4",
    # Structured logging
    "structlog>=24",
    # Scheduling (background tasks)
    "apscheduler>=3.10",
    # HTTP client (for internal tasks)
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-passlib",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
